kaschu/etc/iptables/rules.v4
# Generated by iptables-save v1.4.21 on Thu Jan  7 21:36:30 2016
*filter
:INPUT ACCEPT [16774:3889765]
:FORWARD ACCEPT [16:1748]
:OUTPUT ACCEPT [45758:26926278]
:fail2ban-ssh - [0:0]
-A INPUT -p tcp -m multiport --dports 22 -j fail2ban-ssh
-A FORWARD -i wiBR -o ffrl+ -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A FORWARD -i mzBR -o ffrl+ -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A FORWARD -i ffrl+ -o wiBR -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A FORWARD -i ffrl+ -o mzBR -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A fail2ban-ssh -j RETURN
COMMIT
# Completed on Thu Jan  7 21:36:30 2016
# Generated by iptables-save v1.4.21 on Thu Jan  7 21:36:30 2016
*nat
:PREROUTING ACCEPT [44:1672]
:INPUT ACCEPT [1:56]
:OUTPUT ACCEPT [10:600]
:POSTROUTING ACCEPT [10:600]
:ffrl-nat - [0:0]
-A POSTROUTING -s 10.37.0.0/16 -o ffrl+ -j ffrl-nat
-A POSTROUTING -s 10.56.0.0/16 -o ffrl+ -j ffrl-nat
-A ffrl-nat -s 10.37.0.0/16 -o ffrl+ -j SNAT --to-source 185.66.195.37
-A ffrl-nat -s 10.56.0.0/16 -o ffrl+ -j SNAT --to-source 185.66.195.37
COMMIT
# Completed on Thu Jan  7 21:36:30 2016
# Generated by iptables-save v1.4.21 on Thu Jan  7 21:36:30 2016
*mangle
:PREROUTING ACCEPT [7793222:3021289026]
:INPUT ACCEPT [7767106:3017940832]
:FORWARD ACCEPT [11237:2793706]
:OUTPUT ACCEPT [17651632:8172738535]
:POSTROUTING ACCEPT [17662869:8175532241]
COMMIT
# Completed on Thu Jan  7 21:36:30 2016
